bdr.BDR2.scala.error
Erreur de compilation :
BDR2:21: error: ')' expected but '}' found.
	}
        ^